chore: update heimdall version

--- a/specs-dev/env-watch-list-exists-env.yaml
+++ b/specs-dev/env-watch-list-exists-env.yaml
@@ -40,16 +40,8 @@ spec:
             value: "auth-gateway-keys-dev"
           - name: HEIMDALL_JWT_REQUIRED_FIELDS
             value: "[]"
-          - name: HEIMDALL_REDIS_HOST
-            value: "172.30.11.235"
-          - name: HEIMDALL_REDIS_PORT
-            value: "6379"
-          - name: HEIMDALL_REDIS_DB
-            value: "7"
-          - name: HEIMDALL_REDIS_USER
-            value: "bnd"
-          - name: HEIMDALL_REDIS_PASSWORD
-            value: "jkl321pqr"
+          - name: HEIMDALL_REDIS_URL
+            value: "redis://jormungandr:oUjqwnmdDSA391dja@172.30.11.235:6379?db=1"
           - name: ASGI_FRAMEWORK
             value: "HYPERCORN"
   version: 2
