--- a/specs-uat/function-watch-list-exists-fn.yaml
+++ b/specs-uat/function-watch-list-exists-fn.yaml
@@ -34,9 +34,9 @@ metadata:
 spec:
   InvokeStrategy:
     ExecutionStrategy:
-      ExecutorType: newdeploy
-      MaxScale: 3
-      MinScale: 1
+      ExecutorType: poolmgr
+      MaxScale: 6
+      MinScale: 3
       SpecializationTimeout: 120
       TargetCPUPercent: 80
     StrategyType: execution
