--- a/specs-dev/env-wtc-list-exists-env.yaml
+++ b/specs-dev/env-wtc-list-exists-env.yaml
@@ -2,20 +2,24 @@ apiVersion: fission.io/v1
 kind: Environment
 metadata:
   creationTimestamp: null
-  name: watch-list-exists-env
+  name: wtc-list-exists-env
   namespace: default
 spec:
   builder:
-    command: build
-    image: nexus.sigame.com.br/fission-builder-3.8:0.0.1
-  imagepullsecret: "nexus-v3"
+    container:
+      name: ""
+      resources: {}
+  imagepullsecret: nexus-v3
   keeparchive: false
   resources: {}
   runtime:
-    image: nexus.sigame.com.br/fission-async:0.1.6
+    container:
+      name: ""
+      resources: {}
+    image: nexus.sigame.com.br/fission-wacth-list-exists:0.1.0-0
     podspec:
       containers:
-        - name: watch-list-exists-env
+        - name: wtc-list-exists-envbash
           env:
           - name: ROOT_LOG_LEVEL
             value: "ERROR"
